[package]
name = "microchip-tc72r-rs"
description = "A platform agnostic driver to interface with the Microchip TC72 (temperature sensor) through SPI using embedded-hal"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"
keywords = ["embedded-hal-driver", "accelerometer", "MEMS", "analog-devices", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvniekerk/adxl313-rs"
categories  = ["embedded", "hardware-support", "no-std"]
version = "0.1.0"
readme = "README.md"

[dependencies]
embedded-hal = "~0.2"
